# jellbrid

./: CACHING.md  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: build-and-publish.yaml
src/: cli.py  main.py  server.py
src/jellbrid/: config.py  logging.py  sync.py  tasks.py
src/jellbrid/cli/: jellyfin.py  main.py  realdebrid.py  seers.py  torrentio.py
src/jellbrid/clients/: base.py
src/jellbrid/clients/jellyfin/: __init__.py  client.py  services.py  types.py
src/jellbrid/clients/realdebrid/: __init__.py  bundle.py  client.py  downloader.py  filters.py  services.py  types.py
src/jellbrid/clients/seers/: __init__.py  client.py  services.py  types.py
src/jellbrid/clients/torrentio/: __init__.py  client.py  filters.py  services.py  types.py
src/jellbrid/requests/: __init__.py  cache.py  main.py
src/jellbrid/storage/: __init__.py  active_dl_repo.py  active_dls.py  bad_hashes.py  hash_repo.py  main.py  repo.py
src/jellbrid/storage/alembic/: alembic.ini  env.py
src/jellbrid/storage/alembic/versions/: 2024_12_10_2317-8421aaad5a05_added_bad_hash_table.py
