[project]
name = "jellbrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "anyio>=4.6.0",
    "async-lru>=2.0.4",
    "cachetools>=5.5.0",
    "environs>=11.0.0",
    "httpx>=0.27.2",
    "hypercorn>=0.17.3",
    "jellbrid",
    "quart>=0.19.6",
    "sqlalchemy[asyncio]>=2.0.35",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "typer>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "authlib>=1.3.2",
    "ipython>=8.27.0",
    "pytest>=8.3.3",
    "rich>=13.8.1",
    "ruff>=0.6.8",
]

[tool.uv.sources]
jellbrid = { workspace = true }

[project.scripts]
cli = "cli:app"
